--- a/libs/extension/src/components/VTree.less
+++ b/libs/extension/src/components/VTree.less
@@ -1,10 +1,19 @@
+@import 'assets.less';
+
 .tree_container {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   overflow-y: auto;
 }
 
-.tree_item{
+.tree_item {
   width: 100%;
+  position: absolute;
+}
+
+.tree_icon {
+  color: @gray;
+  display: inline-block;
+  width: 12px
 }
