--- a/libs/extension/src/components/VTree.less
+++ b/libs/extension/src/components/VTree.less
@@ -1,19 +1,28 @@
 @import 'assets.less';
 
-.tree_container {
+.treeContainer {
   position: relative;
   width: 100%;
   height: 100%;
   overflow-y: auto;
 }
 
-.tree_item {
+.treeItem {
   width: 100%;
   position: absolute;
+  .componentName {
+    color: @component-name-color;
+  }
+  .componentKeyName {
+    color: @component-key-color;
+  }
+  .componentKeyValue {
+    color: @componentKeyValue-color;
+  }
 }
 
-.tree_icon {
-  color: @gray;
+.treeIcon {
+  color: @arrow-color;
   display: inline-block;
   width: 12px
 }
