Match-id-c6f3be2ae5ec4f9fe7002b321e94288f8698854f

--- a/libs/extension/src/components/VTree.less
+++ b/libs/extension/src/components/VTree.less
@@ -10,6 +10,13 @@
 .treeItem {
   width: 100%;
   position: absolute;
+  
+.treeIcon {
+  color: @arrow-color;
+  display: inline-block;
+  width: 12px;
+  padding-left: 0.2rem;
+}
   .componentName {
     color: @component-name-color;
   }
@@ -21,8 +28,3 @@
   }
 }
 
-.treeIcon {
-  color: @arrow-color;
-  display: inline-block;
-  width: 12px
-}
