Match-id-73ae28dbb8f2748c5398680c325a7ec24cee005a

--- a/libs/extension/src/components/assets.less
+++ b/libs/extension/src/components/assets.less
@@ -5,6 +5,7 @@
 @component-key-color: rgb(153, 69, 0);
 @componentKeyValue-color: rgb(26, 26, 166);
 @component-attr-color: rgb(200, 0, 0);
+@select-color: rgb(141 199 248 / 60%);
 
 @top-height: 2.625rem;
 @divider-width: 0.2px;
