--- a/libs/extension/src/components/VTree.less
+++ b/libs/extension/src/components/VTree.less
@@ -5,26 +5,36 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
-}
+  .treeItem {
+    width: 100%;
+    position: absolute;
+    line-height: 18px;
+    &:hover {
+      background-color: @select-color;
+    }
 
-.treeItem {
-  width: 100%;
-  position: absolute;
+    .treeIcon {
+      color: @arrow-color;
+      display: inline-block;
+      width: 12px;
+      padding-left: 0.5rem;
+    }
   
-.treeIcon {
-  color: @arrow-color;
-  display: inline-block;
-  width: 12px;
-  padding-left: 0.5rem;
-}
-  .componentName {
-    color: @component-name-color;
+    .componentName {
+      color: @component-name-color;
+    }
+  
+    .componentKeyName {
+      color: @component-key-color;
+    }
+  
+    .componentKeyValue {
+      color: @componentKeyValue-color;
+    }
   }
-  .componentKeyName {
-    color: @component-key-color;
-  }
-  .componentKeyValue {
-    color: @componentKeyValue-color;
+
+  .select {
+    background-color: rgb(141 199 248 / 60%);
   }
 }
 
