--- a/libs/extension/src/components/assets.less
+++ b/libs/extension/src/components/assets.less
@@ -6,6 +6,7 @@
 @componentKeyValue-color: rgb(26, 26, 166);
 @component-attr-color: rgb(200, 0, 0);
 @select-color: rgb(141 199 248 / 60%);
+@hover-color: black;
 
 @top-height: 2.625rem;
 @divider-width: 0.2px;
