Match-id-059b810a64127ac4b754b8a924dd931f129dafa2

--- a/libs/extension/src/components/ComponentsInfo.less
+++ b/libs/extension/src/components/ComponentsInfo.less
@@ -32,11 +32,11 @@
   .componentInfoMain {
     overflow-y: auto;
 
-    :last-child {
+    >:last-child {
       border-bottom: unset;
     }
 
-    :first-child {
+    >:first-child {
       padding: unset;
     }
 
@@ -57,15 +57,11 @@
         .attrType {
           flex: 1 1 0;
         }
-
-
         .attrCopy {
           flex: 0 0 1rem;
           padding-right: 1rem;
         }
       }
-
-
       .attrDetail {
         padding-bottom: 0.5rem;
 
@@ -84,9 +80,19 @@
         }
       }
     }
+  }
 
-    .renderInfo {
-      flex: 1 1 0;
+  .parentsInfo {
+    flex: 1 1 0;
+    .parent {
+      display: block;
+      cursor: pointer;
+      text-align: left;
+      color: @component-name-color;
+      width: 100%;
+      &:hover {
+        background-color: @select-color;
+      }
     }
   }
 }
