--- a/libs/extension/src/panel/App.less
+++ b/libs/extension/src/panel/App.less
@@ -7,6 +7,12 @@
   font-size: @common-font-size;
 }
 
+button {
+  border: none;
+  background: none;
+  padding: 0;
+}
+
 .left {
   flex: 7;
   display: flex;
@@ -41,10 +47,7 @@
     }
 
     .searchAction {
-      padding: 0;
       flex: 0 0 1rem;
-      border: none;
-      background: none;
       height: 1rem;
       color: @arrow-color;
       &:hover{
