Match-id-aad38a74387ab110540aeb594a643b1be7c42a17

--- a/libs/extension/src/components/VTree.less
+++ b/libs/extension/src/components/VTree.less
@@ -6,7 +6,7 @@
   .treeItem {
     width: 100%;
     position: absolute;
-    line-height: 18px;
+    line-height: 1.125rem;
 
     &:hover {
       background-color: @select-color;
