Match-id-3623217ead4919cd5624a24a69e6e6612df52506

--- a/libs/extension/src/components/ComponentsInfo.less
+++ b/libs/extension/src/components/ComponentsInfo.less
@@ -20,11 +20,13 @@
     .eye {
       flex: 0 0 1rem;
       padding-right: 1rem;
+      cursor: pointer;
     }
 
     .debug {
       flex: 0 0 1rem;
       padding-right: 1rem;
+      cursor: pointer;
     }
   }
 
@@ -71,7 +73,7 @@
         }
 
         .attrValue {
-          margin-left: 4px;
+          margin: 0 0 0 4px;
         }
       }
     }
