--- a/packages/create-inula/lib/generators/Simple-app/templates/vite/index.html
+++ b/packages/create-inula/lib/generators/Simple-app/templates/vite/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>My React App</title>
+    <title>My Inula App</title>
   </head>
   <body>
     <div id="root"></div>
