--- a/packages/create-inula/lib/generators/Simple-app/templates/webpack/src/index.html
+++ b/packages/create-inula/lib/generators/Simple-app/templates/webpack/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Inula App</title>
   </head>
   <body>
     <div id="root"></div>
