--- a/packages/inula-dev-tools/src/components/VTree.less
+++ b/packages/inula-dev-tools/src/components/VTree.less
@@ -69,7 +69,7 @@
   background-color: rgba(0, 0, 0, 0.1);
   color: #000000;
   padding: 0 0.25rem;
-  line-height: normal;
+  line-height: 1rem;
   border-radius: 0.125rem;
   margin-left: 0.25rem;
   font-family: @attr-name-font-family;
