--- a/packages/inula-dev-tools/src/panel/Panel.less
+++ b/packages/inula-dev-tools/src/panel/Panel.less
@@ -33,7 +33,7 @@ button {
   display: flex;
   flex-direction: column;
 
-  .left-top {
+  .left_top {
     border-bottom: @divider-style;
     flex: 0 0 @top-height;
     display: flex;
@@ -84,7 +84,7 @@ button {
     }
   }
 
-  .left-bottom {
+  .left_bottom {
     flex: 1;
     height: 0;
   }
